--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "client",
+  "name": "wikiline",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "e2e": "playwright test",
     "deploy:netlify": "npm run build && netlify deploy --prod --dir dist/client/browser"
   },
   "private": true,
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^17.3.17",
     "@angular/cli": "^17.3.17",
     "@angular/compiler-cli": "^17.3.0",
+    "@playwright/test": "^1.47.2",
     "typescript": "~5.4.2"
   }
 }
